Added Avi comments

--- a/GATA1-KO Mouse Bone Marrow Analysis.ipynb
+++ b/GATA1-KO Mouse Bone Marrow Analysis.ipynb
@@ -292,16 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Libraries to use:\n",
-    "libraries = ['MGI_Mammalian_Phenotype_Level_4','WikiPathways_2015',\n",
-    "             'ChEA_2015','PPI_Hub_Proteins','ENCODE_TF_ChIP-seq_2015',\n",
-    "            'KEGG_2016']\n",
+    "libraries = ['MGI_Mammalian_Phenotype_Level_4','WikiPathways_2015','GO_Biological_Process_2016',\n",
+    "             'ChEA_2015','PPI_Hub_Proteins','ENCODE_TF_ChIP-seq_2015','KEGG_2016']\n",
     "\n",
     "# Use this function to call the Enrichr API:\n",
     "ENRICHR_URL = 'http://amp.pharm.mssm.edu/Enrichr/enrich'\n",
@@ -2642,6 +2641,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
